@@ -1,0 +1,186 @@
+# E.S.O. - VLT project/ESO Archive
+# $Id: sss.cfg,v 1.1 2003/09/25 15:57:48 aa Exp $
+# --------------------------------------------------------------------
+# skycat.cfg - config file for Astronomical Catalogs
+#
+# This file is read via http by the skycat software to get
+# the necessary information about the available catalogs.
+#
+# The syntax for each catalog entry is:
+#
+#  serv_type: 	service type, one of: catalog, namesvr, imagesvr
+#               (see Service Types below)
+#
+#  long_name:   long name of service for displaying
+#  short_name:  short name of service
+#  url:         URL used to access catalog, %ra,%dec, etc. expanded (see below)
+#
+#  symbol:      the symbol to use to plot the given column value
+#               (see Plotting below)
+#
+# Service Types
+#---------------
+#
+# The valid service types are:
+#
+#  catalog  - server returns a tab separated table of row/col values
+#  archive    where the headings are followed by a dashed line
+#
+#  namesvr  - same as catalog or archive, except server returns a single 
+#             object with id, ra and dec to resolve the given object name
+#
+#  imagesvr - server returns an image file
+#
+#
+# Syntax for "url" field:
+# --------------------------
+#
+# The url field is used to build a URL to get the results via HTTP.
+# The syntax is like this:
+#
+#      http://host:port/cgi-bin/server?arg1&arg2&...argn
+#
+# (if ":port" is missing, it defaults to 80.)  
+#
+# Substitutions are performed on the URL as follows:
+#
+#  %ra, %dec        - coordinates of center point
+#
+#  %w, %h           - width and height in arcmin around center point
+#
+#  %r1, %r2         - min and max radius (for circular query)
+#
+#  %m1, %m2         - min and max magnitude
+#
+#  %n               - max number of rows to return
+#
+#  %cols            - list of columns to return (col1,col2,...coln)
+#
+#  %id              - ID field of item to return (if supported)
+#
+#  %mime-type       - value for http mime-type field  
+#
+# Name servers only need the %id field, which is set to the object name.
+#
+# Plotting column values
+# ----------------------
+#
+# The syntax for the "symbol:" field is as follows:
+#
+#    symbol:  col-name symbol expr : col-name symbol expr : ...
+#
+# where 
+#   col-name - is the name of the column to plot
+#
+#   symbol   - is the symbol to use, one of:
+#              square, circle, triangle, cross, plus, diamond
+#
+#   expr     - is an expression in terms of the column used to
+#              determine the size of the symbol at standard
+#              magnification. The column name can be used as a
+#              variable in the expression using "$".
+# example: 
+#     symbol: mag circle 15-$mag : xyz square (1-$xyz)*2.5
+#
+# who         when       what
+# --------   ---------   ----------------------------------------------
+# A.Brighton 11 Oct 95   created
+# M.Naumann  24 Jul 96   Updated URLs for catalog servers at the ESO
+#                        Science Archive (archive.eso.org and cgi-bin)
+
+# -- catalogs --
+
+serv_type:      catalog
+long_name:      SuperCOSMOS catalog - blue (UKJ) southern survey
+short_name:     SSScat_UKJ@WFAU
+url:            http://www-wfau.roe.ac.uk/~sss/cgi-bin/gaia_obj.cgi?ra=%ra&dec=%dec&radius=%r2&iradius=%r1&survey=1&bright=%m1&faint=%m2
+symbol:         {PA A_I B_I AREA} {ellipse white {double($B_I)/double($A_I)} {($PA)} {} {}} {{sqrt(7.0*$AREA*double($B_I)/(22.0*double($A_I)))} {}}
+copyright:      SuperCOSMOS/ROE/AAO
+id_col:         0
+ra_col:         1
+dec_col:        2
+x_col:          -1
+y_col:          -1
+
+serv_type:      catalog
+long_name:      SuperCOSMOS catalog - red (UKR) southern survey
+short_name:     SSScat_UKR@WFAU
+url:            http://www-wfau.roe.ac.uk/~sss/cgi-bin/gaia_obj.cgi?ra=%ra&dec=%dec&radius=%r2&iradius=%r1&survey=2&bright=%m1&faint=%m2
+symbol:         {PA A_I B_I AREA} {ellipse white {double($B_I)/double($A_I)} {($PA)} {} {}} {{sqrt(7.0*$AREA*double($B_I)/(22.0*double($A_I)))} {}}
+copyright:      SuperCOSMOS/ROE/AAO
+id_col:         0
+ra_col:         1
+dec_col:        2
+x_col:          -1
+y_col:          -1
+
+serv_type:      catalog
+long_name:      SuperCOSMOS catalog - near IR (UKI) southern survey
+short_name:     SSScat_UKI@WFAU
+url:            http://www-wfau.roe.ac.uk/~sss/cgi-bin/gaia_obj.cgi?ra=%ra&dec=%dec&radius=%r2&iradius=%r1&survey=3&bright=%m1&faint=%m2
+symbol:         {PA A_I B_I AREA} {ellipse white {double($B_I)/double($A_I)} {($PA)} {} {}} {{sqrt(7.0*$AREA*double($B_I)/(22.0*double($A_I)))} {}}
+copyright:      SuperCOSMOS/ROE/AAO
+id_col:         0
+ra_col:         1
+dec_col:        2
+x_col:          -1
+y_col:          -1
+
+serv_type:      catalog
+long_name:      SuperCOSMOS catalog - red (ESOR) southern survey
+short_name:     SSScat_ESOR@WFAU
+url:            http://www-wfau.roe.ac.uk/~sss/cgi-bin/gaia_obj.cgi?ra=%ra&dec=%dec&radius=%r2&iradius=%r1&survey=4&bright=%m1&faint=%m2
+symbol:         {PA A_I B_I AREA} {ellipse white {double($B_I)/double($A_I)} {($PA)} {} {}} {{sqrt(7.0*$AREA*double($B_I)/(22.0*double($A_I)))} {}}
+copyright:      SuperCOSMOS/ROE/AAO/ESO
+id_col:         0
+ra_col:         1
+dec_col:        2
+x_col:          -1
+y_col:          -1
+
+# -- image servers --
+
+serv_type:      imagesvr
+long_name:      SuperCOSMOS image - blue (UKJ) southern survey
+short_name:     SSSpix_UKJ@WFAU
+url:            http://www-wfau.roe.ac.uk/~sss/cgi-bin/gaia_pix.cgi?ra=%ra&dec=%dec&survey=1&mime-type=image/x-gfits&x=%w&y=%h
+copyright:      SuperCOSMOS/ROE/AAO
+id_col:         0
+ra_col:         1
+dec_col:        2
+x_col:          -1
+y_col:          -1
+
+serv_type:      imagesvr
+long_name:      SuperCOSMOS image - red (UKR) southern survey
+short_name:     SSSpix_UKR@WFAU
+url:            http://www-wfau.roe.ac.uk/~sss/cgi-bin/gaia_pix.cgi?ra=%ra&dec=%dec&survey=2&mime-type=image/x-gfits&x=%w&y=%h
+copyright:      SuperCOSMOS/ROE/AAO
+id_col:         0
+ra_col:         1
+dec_col:        2
+x_col:          -1
+y_col:          -1
+
+serv_type:      imagesvr
+long_name:      SuperCOSMOS image - near IR (UKI) southern survey
+short_name:     SSSpix_UKI@WFAU
+url:            http://www-wfau.roe.ac.uk/~sss/cgi-bin/gaia_pix.cgi?ra=%ra&dec=%dec&survey=3&mime-type=image/x-gfits&x=%w&y=%h
+copyright:      SuperCOSMOS/ROE/AAO
+id_col:         0
+ra_col:         1
+dec_col:        2
+x_col:          -1
+y_col:          -1
+
+serv_type:      imagesvr
+long_name:      SuperCOSMOS image - red (ESOR) southern survey
+short_name:     SSSpix_ESOR@WFAU
+url:            http://www-wfau.roe.ac.uk/~sss/cgi-bin/gaia_pix.cgi?ra=%ra&dec=%dec&survey=4&mime-type=image/x-gfits&x=%w&y=%h
+copyright:      SuperCOSMOS/ROE/AAO/ESO
+id_col:         0
+ra_col:         1
+dec_col:        2
+x_col:          -1
+y_col:          -1
+
